# notchtap

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.html  README.md  biome.json  components.json  index.html  justfile  notchtap  nudge-demo.html  package-lock.json  package.json  prototype-demo-card-news-rail.html  prototype-notch-morph.html  prototype-settings.html  settings.html  skills-lock.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  TESTING_STRATEGY.md  V1_TECHNICAL_SPEC.md  V2_TECHNICAL_SPEC.md  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: clear_queue.toml  get_connector_health.toml  get_default_config.toml  get_queue.toml  get_recent_log_lines.toml  get_secret_status.toml  save_config_and_relaunch.toml  search_news_now.toml  send_test_notification.toml  set_appearance.toml  set_secret.toml  skip_current.toml
src-tauri/src/: config.rs  crests.rs  engine.rs  error.rs  event.rs  history.rs  hover.rs  http.rs  lib.rs  logging.rs  login_item.rs  main.rs  net.rs  notifier.rs  now_playing.rs  poller.rs  presentation.rs  queue.rs  rss_poller.rs  settings.rs  settings_commands.rs  status.rs  weather_poller.rs
src-tauri/tests/fixtures/: espn-plays-page1.json  espn-plays-page3-newest.json  espn-summary-live.json  open-meteo-bangalore.json  scoreboard-bra.1.json  scoreboard-eng.1.json  scoreboard-esp.1.json  scoreboard-uefa.champions.json  scoreboard-usa.1.json
(+363 files in other folders)
