[package]
name = "notchtap"
version = "0.1.0"
description = "macOS notch/hud notification overlay"
authors = ["chetanjain"]
edition = "2021"

[lib]
name = "notchtap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2.5"
thiserror = "2.0.18"
anyhow = "1.0.103"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.3"
dirs = "6.0.0"
uuid = { version = "1.24.0", features = ["v4"] }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
smappservice-rs = "0.1"
reqwest = { version = "0.13.4", features = ["json"] }
chrono = "0.4"
feed-rs = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-global-shortcut = "2.3.2"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "test"] }
wiremock = "0.6"
